--- a/config/assets.yaml
+++ b/config/assets.yaml
@@ -9,3 +9,4 @@ javascripts:
     - build/knockback_observable.js
     - build/knockback_observables.js
     - build/knockback_triggered_observable.js
+    - build/knockback_view_model.js
