--- a/config/assets.yaml
+++ b/config/assets.yaml
@@ -13,4 +13,5 @@ javascripts:
     - build/knockback_observable.js
     - build/knockback_observables.js
     - build/knockback_triggered_observable.js
+    - build/knockback_attribute_connectors.js
     - build/knockback_view_model.js
