--- a/config/assets_min.yaml
+++ b/config/assets_min.yaml
@@ -4,6 +4,8 @@ compress_assets: on
 javascripts:
   'knockback.min':
     - build/knockback_core.js
+    - build/knockback_ref_countable.js
+    - build/knockback_store.js
     - build/knockback_collection_observable.js
     - build/knockback_default_wrapper.js
     - build/knockback_formatted_observable.js
@@ -11,4 +13,5 @@ javascripts:
     - build/knockback_observable.js
     - build/knockback_observables.js
     - build/knockback_triggered_observable.js
+    - build/knockback_attribute_connectors.js
     - build/knockback_view_model.js
