--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "coffee-script": ">=1.3.0",
     "yaml": ">=0.2.3",
     "js-yaml": ">=0.3.7",
-    "walk": ">=2.1.1"
+    "wrench": ">=1.3.9"
   },
 
   "lib" : ".",
