--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "url": "http://github.com/kmalakoff/knockback.git"
   },
 
+  "scripts": {
+    "test": "cake -s test"
+  },
   "dependencies"  : {
     "underscore"  : ">=1.3.1",
     "backbone"  : ">=0.9.1",
@@ -19,7 +22,8 @@
     "coffee-script": ">=1.3.0",
     "yaml": ">=0.2.3",
     "js-yaml": ">=0.3.7",
-    "wrench": ">=1.3.9"
+    "wrench": ">=1.3.9",
+    "qunit": "0.2.x"
   },
 
   "lib" : ".",
