--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "coffee-script": ">=1.3.0",
     "yaml": ">=0.2.3",
     "js-yaml": ">=0.3.7",
-    "wrench": ">=1.3.9",
-    "qunit": "0.2.x"
+    "wrench": ">=1.3.9"
   },
 
   "lib" : ".",
