--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
 
   "scripts": {
-    "test": "cake -s test"
+    "test": "cake test"
   },
   "dependencies"  : {
     "underscore"  : ">=1.3.1",
