--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "coffee-script": ">=1.3.0",
     "yaml": ">=0.2.3",
     "js-yaml": ">=0.3.7",
-    "minifyjs": ">=0.1.0",
+    "uglify-js": ">=1.3.0",
     "wrench": ">=1.3.9"
   },
 
