--- a/package.json
+++ b/package.json
@@ -11,19 +11,16 @@
   },
 
   "scripts": {
-    "test": "cake test"
+    "test": "node_modules/.bin/cake -c test"
   },
   "dependencies"  : {
-    "underscore"  : ">=1.3.1",
+    "underscore"  : ">=1.3.3",
     "backbone"  : ">=0.9.1",
     "knockout"  : ">=1.2.1"
   },
   "devDependencies": {
-    "coffee-script": ">=1.3.0",
-    "yaml": ">=0.2.3",
-    "js-yaml": ">=0.3.7",
-    "uglify-js": ">=1.3.0",
-    "wrench": ">=1.3.9"
+    "coffee-script": ">=1.3.3",
+    "easy-bake": ">=0.1.0"
   },
 
   "lib" : ".",
