Fixed postinstall dependencies

--- a/easy-bake-config.yml
+++ b/easy-bake-config.yml
@@ -51,20 +51,20 @@ tests:
 postinstall:
   copy_latest_underscore:
     command: 'cp'
-    args: ['node_modules/underscore/underscore.js', 'vendor/underscore-latest.js']
+    args: ['backbone-modelref/vendor/underscore-latest.js', 'vendor/underscore-latest.js']
   copy_latest_backbone:
     command: 'cp'
-    args: ['node_modules/backbone/backbone.js', 'vendor/backbone-latest.js']
+    args: ['backbone-modelref/vendor/backbone-latest.js', 'vendor/backbone-latest.js']
   copy_latest_backbone_modelref:
     command: 'cp'
-    args: ['node_modules/backbone-modelref/backbone-modelref.js', 'vendor/backbone-modelref-latest.js']
+    args: ['backbone-modelref', 'vendor/backbone-modelref-latest.js']
 
   # npm version of backbone_relational too old
   # copy_latest_backbone_relational:
   #   command: 'cp'
-  #   args: ['node_modules/backbone-rel/backbone-relational.js', 'vendor/backbone-relational-latest.js']
+  #   args: ['backbone-relational', 'vendor/backbone-relational-latest.js']
 
   # npm version of knockout is not a general-purpose library
   # copy_latest_knockout:
   #   command: 'cp'
-  #   args: ['node_modules/knockout/lib/knockout.js', 'vendor/knockout-latest.js']
+  #   args: ['knockout', 'vendor/knockout-latest.js']
