--- a/easy-bake-config.yml
+++ b/easy-bake-config.yml
@@ -51,10 +51,10 @@ tests:
 postinstall:
   copy_latest_underscore:
     command: 'cp'
-    args: ['backbone-modelref/vendor/underscore-latest.js', 'vendor/underscore-latest.js']
+    args: ['underscore', 'vendor/underscore-latest.js']
   copy_latest_backbone:
     command: 'cp'
-    args: ['backbone-modelref/vendor/backbone-latest.js', 'vendor/backbone-latest.js']
+    args: ['backbone', 'vendor/backbone-latest.js']
   copy_latest_backbone_modelref:
     command: 'cp'
     args: ['backbone-modelref', 'vendor/backbone-modelref-latest.js']
