--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -1,6 +1,6 @@
 {
   "author"        : {"name": "Kevin Malakoff", "url": "https://github.com/kmalakoff"},
-  "name"          : "knockback_dev",
+  "name"          : "knockback",
   "description"   : "Knockback.js provides Knockout.js magic for Backbone.js Models and Collections",
   "keywords"      : ["knockback", "knockbackjs", "backbone", "backbonejs", "knockout", "knockoutjs"],
 
@@ -11,18 +11,13 @@
     "url": "http://github.com/kmalakoff/knockback.git"
   },
 
-  "scripts": {
-    "preinstall": "npm install coffee-script; npm install easy-bake@0.1.2",
-    "postinstall": "cake postinstall",
-    "test": "cake -c -b test"
-  },
   "optionalDependencies": {
     "underscore": "latest",
     "backbone": "latest",
-    "backbone-relational": "latest",
-    "backbone-modelref": "latest",
-    "knockout-client": "latest"
+    "knockout-client": "latest",
+    "knockout": "latest"
   },
 
+  "main"          : "knockback.js",
   "version"       : "0.15.3"
 }
