--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author"        : {"name": "Kevin Malakoff", "url": "https://github.com/kmalakoff"},
-  "name"          : "knockback_dev",
+  "name"          : "_knockback",
   "description"   : "Knockback.js provides Knockout.js magic for Backbone.js Models and Collections",
   "keywords"      : ["knockback", "knockbackjs", "backbone", "backbonejs", "knockout", "knockoutjs"],
 
@@ -17,11 +17,12 @@
     "test": "cake -c -b test"
   },
   "optionalDependencies": {
-    "underscore": "latest",
-    "backbone": "latest",
-    "backbone-relational": "latest",
-    "backbone-modelref": "latest",
-    "knockout-client": "latest"
+    "underscore": ">=1.3.3",
+    "backbone": ">=0.9.2",
+    "backbone-relational": ">=0.5.0",
+    "backbone-modelref": ">=0.1.2",
+    "knockout": ">=2.1.0",
+    "knockout-client": ">=2.1.0"
   },
 
   "version"       : "0.15.3"
