--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -12,10 +12,10 @@
   },
 
   "optionalDependencies": {
-    "underscore": "latest",
-    "backbone": "latest",
-    "knockout-client": "latest",
-    "knockout": "latest"
+    "underscore": ">=1.3.3",
+    "backbone": ">=0.9.2",
+    "knockout-client": ">=2.1.0",
+    "knockout": ">=2.1.0"
   },
 
   "main"          : "knockback.js",
