--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "coffee-script": ">=1.3.3",
-    "easy-bake": "0.1.7"
+    "easy-bake": "0.1.7",
+    "codo": ">=1.3.1"
   },
   "optionalDependencies": {
     "underscore": ">=1.3.3",
