--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -14,8 +14,7 @@
   "optionalDependencies": {
     "underscore": ">=1.3.3",
     "backbone": ">=0.9.9",
-    "knockout-client": ">=2.2.0",
-    "knockout": ">=2.2.0"
+    "knockout-client": ">=2.2.0"
   },
 
   "main"          : "knockback.js",
