--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -12,9 +12,9 @@
   },
 
   "optionalDependencies": {
-    "underscore": ">=1.3.3",
-    "backbone": ">=0.9.9",
-    "knockout-client": ">=2.2.0"
+    "underscore": ">=1.4.4",
+    "backbone": ">=1.0.0",
+    "knockout": "2.2.1"
   },
 
   "main"          : "knockback.js",
