--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "coffee-script": ">=1.3.3",
     "easy-bake": "0.1.8",
     "codo": ">=1.4.0",
-    "phantomjs" : ">=1.9.1"
+    "phantomjs" : ">=1.9.1",
+    "uglify-js" : ">=2.3.6"
   },
   "optionalDependencies": {
     "underscore": ">=1.4.4",
