--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "coffee-script": ">=1.3.3",
     "easy-bake": "0.1.8",
-    "codo": ">=1.4.0"
+    "codo": "1.7.x"
   },
   "optionalDependencies": {
     "underscore": ">=1.4.4",
