--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
   "optionalDependencies": {
     "backbone-relational": "0.8.x",
     "backbone-modelref": "0.1.x",
-    "lodash": "2.3.x"
+    "lodash": "2.3.x",
+
+    "backbone-orm": "0.5.x",
+    "moment": "2.0.x",
+    "inflection": "1.2.x",
+    "lru-cache": "2.3.x"
   }
 }
