--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "backbone-orm": "0.5.x",
     "moment": "2.0.x",
     "inflection": "1.2.x",
-    "lru-cache": "2.3.x"
+    "lru-cache": "2.3.x",
+
+    "backbone-associations": "0.5.x",
+    "supermodel": "0.0.x"
   }
 }
