--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "underscore": ">=1.1.7",
     "backbone": ">=0.5.1",
-    "knockout": ">=1.2.1"
+    "knockout": "knockout.js#>=1.2.1"
   },
 
   "license": "MIT"
