--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "repository"    : {"type": "git", "url": "http://github.com/kmalakoff/knockback.git"},
 
   "scripts": {
-    "postinstall": "./node_modules/.bin/bake postinstall",
-    "clean": "./node_modules/.bin/bake clean",
-    "build": "./node_modules/.bin/bake build",
-    "watch": "./node_modules/.bin/bake watch",
-    "test": "./node_modules/.bin/bake test -c",
-    "docs": "./node_modules/.bin/codo -n Knockback.js -o doc src/."
+    "test": "gulp build --require coffee-script/register; NODE_ENV=test mocha test/suite.coffee --compilers coffee:coffee-script/register --reporter spec --timeout 10000",
+    "docs": "./node_modules/.bin/codo -n Knockback.js -o doc src/.",
+    "build": "gulp build --require coffee-script/register",
+    "watch": "gulp watch --require coffee-script/register",
+    "release": "gulp release --require coffee-script/register",
+    "clean": "rm -rf lib/*",
+    "prepublish": "gulp release --require coffee-script/register"
   },
   "dependencies": {
     "underscore": ">=1.1.7",
@@ -26,11 +27,17 @@
   },
   "devDependencies": {
     "coffee-script": "*",
-    "easy-bake": "*",
     "codo": "2.x.x",
     "phantomjs" : "*",
-    "uglify-js" : "*",
-    "module-bundler" : "*"
+    "gulp": "*",
+    "gulp-util": "*",
+    "gulp-uglify": "*",
+    "gulp-rename": "*",
+    "gulp-zip": "*",
+    "gulp-coffee": "*",
+    "gulp-compile-js": "*",
+    "gulp-module-system": "*",
+    "event-stream": "*"
   },
   "optionalDependencies": {
     "backbone-relational": "0.8.x",
