--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "event-stream": "*",
     "module-bundler": "*",
     "queue-async": "*",
+    "async": "*",
     "vinyl-fs": "*"
   },
   "optionalDependencies": {
