--- a/package.json
+++ b/package.json
@@ -32,14 +32,13 @@
     "gulp-uglify": "*",
     "gulp-rename": "*",
     "gulp-zip": "*",
-    "gulp-coffee": "*",
     "gulp-compile-js": "*",
     "gulp-module-system": "*",
     "gulp-header": "*",
     "gulp-concat": "*",
     "gulp-mocha-phantomjs": "*",
     "gulp-shell": "*",
-    "gulp-require-src": "git+https://github.com/kmalakoff/gulp-require-src",
+    "gulp-require-src": "*",
     "event-stream": "*",
     "module-bundler": "*",
     "queue-async": "*",
