--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "codo": "2.x",
     "coffee-script": "*",
     "event-stream": "*",
+    "lodash": "*",
     "gulp": "*",
     "gulp-compile-js": "*",
     "gulp-concat": "*",
