--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     "karma-chrome-launcher": "^0.1.4",
     "karma-cli": "*",
     "karma-coffee-preprocessor": "*",
+    "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.4",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-safari-launcher": "^0.1.1",
     "mocha": "^1.20.1",
     "module-bundler": "*",
     "queue-async": "*"
