--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.4",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2",
     "karma-safari-launcher": "^0.1.1",
     "mocha": "^1.20.1",
     "module-bundler": "*",
-    "queue-async": "*"
+    "queue-async": "*",
+    "requirejs": "^2.1.14"
   },
   "optionalDependencies": {
     "backbone-relational": "0.8.x",
