--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
+  "name": "knockback",
+  "version": "0.18.6",
+  "description": "Knockback.js provides Knockout.js magic for Backbone.js Models and Collections",
+  "main": "./knockback.js",
   "author": {
     "name": "Kevin Malakoff",
     "url": "https://github.com/kmalakoff"
   },
-  "name": "knockback",
-  "version": "0.18.6",
-  "description": "Knockback.js provides Knockout.js magic for Backbone.js Models and Collections",
   "keywords": [
     "knockback",
     "knockbackjs",
@@ -14,7 +15,6 @@
     "knockout",
     "knockoutjs"
   ],
-  "main": "knockback.js",
   "private": true,
   "url": "http://kmalakoff.github.com/knockback/",
   "homepage": "http://kmalakoff.github.com/knockback/",
