Refactor for consistency

--- a/package.json
+++ b/package.json
@@ -37,11 +37,9 @@
   },
   "devDependencies": {
     "async": "*",
-    "codo": "2.x",
-    "coffee-loader": "^0.7.2",
     "chai": "^1.9.1",
     "codo": "2.x",
-    "jquery": "*",
+    "coffee-loader": "^0.7.2",
     "coffee-script": "*",
     "event-stream": "*",
     "gulp": "*",
@@ -52,14 +50,12 @@
     "gulp-module-system": "*",
     "gulp-rename": "*",
     "gulp-require-src": "*",
-    "gulp-wrap-amd-infer": "*",
     "gulp-shell": "*",
     "gulp-uglify": "*",
     "gulp-util": "*",
+    "gulp-wrap-amd-infer": "*",
     "gulp-zip": "*",
-    "module-bundler": "*",
-    "queue-async": "*",
-    "webpack": "*",
+    "jquery": "*",
     "karma": "*",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.4",
@@ -74,6 +70,8 @@
     "module-bundler": "*",
     "queue-async": "*",
     "requirejs": "2.x",
+    "semver": "^2.3.1",
+    "webpack": "*",
     "wrench": "*"
   },
   "optionalDependencies": {
