--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-compile-js": "*",
     "gulp-concat": "*",
     "gulp-header": "*",
+    "gulp-mocha": "^0.4.1",
     "gulp-mocha-phantomjs": "*",
     "gulp-module-system": "*",
     "gulp-rename": "*",
@@ -68,9 +69,9 @@
     "karma-safari-launcher": "^0.1.1",
     "mocha": "^1.20.1",
     "queue-async": "*",
+    "requirejs": "*",
     "webpack": "*",
-    "wrench": "*",
-    "requirejs": "*"
+    "wrench": "*"
   },
   "optionalDependencies": {
     "jquery": "*",
