--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "gulp-header": "*",
     "gulp-mocha": "^0.4.1",
     "gulp-mocha-phantomjs": "*",
-    "gulp-module-system": "*",
+    "gulp-webpack-config": "*",
     "gulp-rename": "*",
     "gulp-require-src": "*",
     "gulp-shell": "*",
