Completed fix for https://github.com/kmalakoff/knockback/issues/108

--- a/package.json
+++ b/package.json
@@ -63,11 +63,12 @@
     "karma-mocha": "^0.1.4",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-safari-launcher": "^0.1.1",
-    "node-jquery-xhr": "^1.8.3",
+    "karma-spec-reporter": "0.0.13",
     "mocha": "*",
+    "node-jquery-xhr": "^1.8.3",
+    "nuget": "*",
     "queue-async": "*",
     "webpack": "git+https://github.com/forivall/webpack#master",
-    "nuget": "*",
     "wrench": "*"
   },
   "optionalDependencies": {
