--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
     "knockout": ">=2.1.0"
   },
   "devDependencies": {
-    "async": "^0.9.0",
+    "async": "*",
     "chai": "*",
     "codo": "2.x",
-    "coffee-loader": "^0.7.2",
+    "coffee-loader": "*",
     "coffee-script": "*",
     "event-stream": "*",
     "gulp": "*",
-    "gulp-browserify": "^0.5.0",
+    "gulp-browserify": "*",
     "gulp-compile-js": "*",
     "gulp-concat": "*",
     "gulp-header": "*",
-    "gulp-mocha": "^0.4.1",
+    "gulp-mocha": "*",
     "gulp-mocha-phantomjs": "*",
     "gulp-rename": "*",
     "gulp-require-src": "*",
@@ -55,17 +55,17 @@
     "gulp-zip": "*",
     "jquery": "*",
     "karma": "*",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.4",
+    "karma-chai": "*",
+    "karma-chrome-launcher": "*",
     "karma-cli": "*",
     "karma-coffee-preprocessor": "*",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-mocha": "^0.1.4",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-spec-reporter": "0.0.13",
+    "karma-firefox-launcher": "*",
+    "karma-mocha": "*",
+    "karma-phantomjs-launcher": "*",
+    "karma-safari-launcher": "*",
+    "karma-spec-reporter": "*",
     "mocha": "*",
-    "node-jquery-xhr": "^1.8.3",
+    "node-jquery-xhr": "*",
     "nuget": "*",
     "queue-async": "*",
     "webpack": "git+https://github.com/forivall/webpack#master",
