--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "knockback",
-  "version": "0.19.3",
+  "version": "0.19.4",
   "description": "Knockback.js provides Knockout.js magic for Backbone.js Models and Collections",
   "main": "knockback.js",
   "author": {
@@ -53,6 +53,7 @@
     "gulp-webpack-config": "*",
     "gulp-wrap-amd-infer": "*",
     "gulp-zip": "*",
+    "imports-loader": "^0.6.3",
     "jquery": "*",
     "karma": "*",
     "karma-chai": "*",
