--- a/package.json
+++ b/package.json
@@ -46,14 +46,12 @@
     "gulp-mocha": "*",
     "gulp-mocha-phantomjs": "*",
     "gulp-rename": "*",
-    "gulp-require-src": "*",
     "gulp-shell": "*",
     "gulp-uglify": "*",
     "gulp-util": "*",
     "gulp-webpack-config": "*",
-    "gulp-wrap-amd-infer": "*",
     "gulp-zip": "*",
-    "imports-loader": "^0.6.3",
+    "imports-loader": "*",
     "jquery": "*",
     "karma": "*",
     "karma-chai": "*",
